2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
	* NEWS: Note change to Amazon S3, add ampgsql

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
        * server-src/amcheck.c: Set l on error path.

2009-03-31  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c: don't send empty location constraint,
	  allocate error messages, fix constraint check in case of wildcard
	* installcheck/Amanda_Device.pl: actually test location constraints

2009-03-31  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl: add newline to end of index entry

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Set $self->{mesgout} before calling
	                              method that use it.

2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/Makefile.am: Remove amgtar_perl.
	* application-src/amgtar_perl.pl: Remove file.

2009-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amsamba.8.xml: Document amandapass file location.

2009-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: allow relative AMANDAPASS property.
	* man/xml-source/amsamba.8.xml: Document amandapass file location.
	* ReleaseNotes: amsamba

2009-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: exit(1) if match_disklist() return an error.
	* server-src/planner.c: Better logging if match_disklist() return an
	                        error.

2009-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Use new one_est_t,
	                        print warning for server guessed estimate.

2009-03-29 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec: change a number of %if conditionals to
	  macros which expand if they are defined.

2009-03-29  Nikolas Coukouma <atrus@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: add more notes

2009-03-27  Nikolas Coukouma <atrus@zmanda.com>
	* device-src/s3.c, installcheck/Amanda_Device.pl: