@@ -1,4 +1,7 @@
 2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
+	* device-src/s3-device.c: don't clobber errors from setup_handle
+
+2009-04-01  Nikolas Coukouma <atrus@zmanda.com>
 	* NEWS: Note change to Amazon S3, add ampgsql
 
 2009-03-31  Jean-Louis Martineau <martineau@zmanda.com>
